--- a/js/1.html
+++ b/js/1.html
@@ -1,13 +1,27 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset=utf-8>
-    </head>
-    <body>
-        <script type="text/javascript">
-        	// 补全代码
-        	let nowTime = getDate()
-            console.log(nowTime);
-        </script>
-    </body>
+
+<head>
+    <meta charset=utf-8>
+</head>
+<!-- 引入样式文件 -->
+<link rel="stylesheet" href="https://fastly.jsdelivr.net/npm/vant@4/lib/index.css" />
+
+<!-- 引入 Vue 和 Vant 的 JS 文件 -->
+<script src="https://fastly.jsdelivr.net/npm/vue@3"></script>
+<script src="https://fastly.jsdelivr.net/npm/vant@4/lib/vant.min.js"></script>
+
+<body>
+   <script>
+    const arr = [1,2,3,4,5]
+    const arr1 = [7,8,9]
+    const arr2 = [17,18,19]
+    const arr3 = [27,28,29]
+    function a(){
+        console.log(arguments);
+    }
+    a()
+   </script>
+</body>
+
 </html>
